# retail-forecasting

./: .gitignore  dvc.yaml  hello.py  paths.py  pyproject.toml
.dvc/: config
data/raw/: supermarket.db.dvc
data/transformed/: work.csv
data/validation/: validation.csv
notebooks/: 01_Set Up.ipynb  06_Modelizacion para Regresion.ipynb  07_Preparacion del codigo de produccion.ipynb  data_quality.ipynb  eda.ipynb  feature_engineering.ipynb  inference.ipynb  setup.ipynb  setup1.ipynb  variable_preselection.ipynb
scripts/: eda.py
src/: __init__.py  config.py  data_loader.py  feature_engineering.py  feature_pipeline.py  preprocessing.py  setup.py  variable_preselection.py
src/temp/: validation.parquet  work.parquet
src/tests/: test_data_loader.py
tests/: test_feature_engineering.py  test_preprocessing.py  test_setup.py  test_variable_preselection.py
tests/data/: cat_result_quality.parquet  num_result_quality.parquet  work.parquet  x_preselection.parquet  y_preselection.parquet
