[project]
name = "retail-forecasting"
version = "0.1.0"
description = "MLE Retail Forecasting Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "metaflow>=2.13.9",
    "streamlit>=1.30.0",
    "pyjanitor",
    "mlflow>=2.20.1",
    "dvc>=3.59.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5"
]